--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,7 +44,7 @@ const { title, description, keywords, image } = Astro.props
       <main class="flex-1 px-6">
         <slot />
       </main>
-      <Footer />
+      <Footer lang={lang} />
       <BackToTop />
     </div>
   </body>
