fix: icons relative path

--- a/src/components/ui/Icon.astro
+++ b/src/components/ui/Icon.astro
@@ -13,5 +13,5 @@ const { name, class: className, id, title = name } = Astro.props
 
 <svg class={className} id={id}>
   <title>{title}</title>
-  <use href={`./icons/sprite.svg#${name}`}></use>
+  <use href={`/icons/sprite.svg#${name}`}></use>
 </svg>
