--- a/src/components/LocaleSelect.astro
+++ b/src/components/LocaleSelect.astro
@@ -15,14 +15,16 @@ const locales = Object.entries(langs).map(([value, label]) => ({
 }))
 ---
 
-<label class="border-panel/50 xs:w-56 relative inline-block w-full border-2">
+<label
+  class="border-outline xs:w-56 relative inline-block w-full rounded-lg border-2"
+>
   <select class="h-10 w-full appearance-none px-4 outline-none" data-lang>
     {
       locales.map(lang => (
         <option
           selected={lang.value === currentLocale}
           data-lang={lang.value}
-          class="bg-panel text-fg-muted"
+          class="bg-canvas-muted text-fg-muted"
           value={lang.path}
         >
           {lang.label}
