--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -70,7 +70,7 @@ const social = [
       class="border-outline text-fg-muted xs:flex-row-reverse flex flex-col items-center justify-between gap-16 border-t pt-8 text-center text-base font-light"
     >
       <LocaleSelect />
-      <span class="whitespace-nowrap">
+      <span class="text-fg font-medium whitespace-nowrap">
         Tinogasta Labs - {new Date().getFullYear()}
       </span>
     </div>
