--- a/src/components/LocaleSelect.astro
+++ b/src/components/LocaleSelect.astro
@@ -16,7 +16,7 @@ const locales = Object.entries(langs).map(([value, label]) => ({
 ---
 
 <label
-  class="border-outline xs:w-56 relative inline-block w-full rounded-lg border-2"
+  class="border-outline xs:w-56 bg-canvas-muted text-fg-muted relative inline-block w-full rounded-lg border-2 font-medium"
 >
   <select class="h-10 w-full appearance-none px-4 outline-none" data-lang>
     {
