--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -27,7 +27,9 @@ const navItems = [
       <div class="flex h-24 justify-between">
         <div class="flex items-center">
           <div class="flex-shrink-0">
-            <a href="/" class="text-lg sm:text-xl" id="logo">Tinogasta Labs</a>
+            <a href="/" class="text-lg font-medium sm:text-xl" id="logo"
+              >Tinogasta Labs</a
+            >
           </div>
         </div>
 
