--- a/src/sections/FaqSection.astro
+++ b/src/sections/FaqSection.astro
@@ -20,36 +20,41 @@ const faqs = t['faq.list']
   style={{ animationDelay: '0.3s', animationFillMode: 'forwards' }}
 >
   <Container>
-    <header class="mb-24 flex flex-col gap-4">
-      <h1 class="text-2xl font-medium sm:text-4xl">{t['faq.title']}</h1>
-      <p class="text-fg-muted text-xl leading-6">
-        {t['faq.subtitle']}
-      </p>
-    </header>
+    <div class="flex flex-col lg:flex-row lg:gap-12">
+      <header class="mb-24 flex flex-col gap-4 lg:mt-4 lg:max-w-[460px]">
+        <h1 class="text-2xl font-medium sm:text-4xl">{t['faq.title']}</h1>
+        <p class="text-fg-muted text-xl leading-6 lg:leading-8">
+          {t['faq.subtitle']}
+        </p>
+      </header>
 
-    <div>
-      {
-        faqs.map((faq, idx) => (
-          <div class="border-outline mb-4 border-b pb-4">
-            <button
-              aria-expanded="false"
-              aria-controls="1"
-              class="faq-question flex w-full cursor-pointer items-center justify-between gap-4 py-4 text-left"
-            >
-              <h1 class="text-lg font-medium">{faq.question}</h1>
-              <Icon name="chevron-down" class="text-fg-muted size-5 shrink-0" />
-            </button>
-            <div
-              class="faq-answer max-h-0 transform overflow-hidden opacity-0 transition-all duration-300 ease-in-out"
-              id={`answer-${idx}`}
-            >
-              <p class="text-fg-muted pb-6 text-lg leading-relaxed">
-                {faq.answer}
-              </p>
+      <div class="flex-1">
+        {
+          faqs.map((faq, idx) => (
+            <div class="border-outline mb-4 border-b pb-4">
+              <button
+                aria-expanded="false"
+                aria-controls="1"
+                class="faq-question flex w-full cursor-pointer items-center justify-between gap-4 py-4 text-left"
+              >
+                <h1 class="text-lg font-medium">{faq.question}</h1>
+                <Icon
+                  name="chevron-down"
+                  class="text-fg-muted size-5 shrink-0"
+                />
+              </button>
+              <div
+                class="faq-answer max-h-0 transform overflow-hidden opacity-0 transition-all duration-300 ease-in-out"
+                id={`answer-${idx}`}
+              >
+                <p class="text-fg-muted pb-6 text-lg leading-relaxed">
+                  {faq.answer}
+                </p>
+              </div>
             </div>
-          </div>
-        ))
-      }
+          ))
+        }
+      </div>
     </div>
   </Container>
 </section>
