--- a/src/sections/ContactSection.astro
+++ b/src/sections/ContactSection.astro
@@ -20,7 +20,7 @@ const t = getTranslations(lang)
 >
   <div class="bg-canvas rounded-4xl px-8 py-16 sm:px-16 sm:py-32" id="contact">
     <Container>
-      <header class="mb-24 flex flex-col gap-4">
+      <header class="mb-12 flex flex-col gap-4">
         <h1 class="text-fg-inverted text-2xl font-medium sm:text-4xl">
           {t['contact.title']}
         </h1>
@@ -29,31 +29,20 @@ const t = getTranslations(lang)
         </p>
       </header>
 
-      <div class="grid gap-6 sm:grid-cols-2">
-        <div class="group transition-all">
-          <a
-            href={`mailto:${config.social.email}?subject=Consulta%20sobre%20servicios`}
-            class="bg-canvas ring-fg-muted flex items-center gap-4 rounded-lg px-6 py-8 ring"
-          >
-            <Icon name="envelope-closed" class="text-fg-muted size-5" />
-            <span class="text-fg-inverted flex-1">
-              {t['contact.email']}
-            </span>
-            <Icon name="external-link" class="text-fg-muted size-4" />
-          </a>
-        </div>
-        <div class="group hover:bg-fg/10 border-fg/10 border transition-all">
-          <a
-            href={config.social.github}
-            class="bg-canvas ring-fg-muted flex items-center gap-4 rounded-lg px-6 py-8 ring"
-          >
-            <Icon name="github-logo" class="text-fg-muted size-5" />
-            <span class="text-fg-inverted flex-1">
-              {t['contact.contribute']}
-            </span>
-            <Icon name="external-link" class="text-fg-muted size-4" />
-          </a>
-        </div>
+      <div class="flex items-center gap-4">
+        <a
+          href={`mailto:${config.social.email}?subject=Consulta%20sobre%20servicios`}
+          class="border-canvas bg-canvas-primary text-fg inline-flex h-12 cursor-pointer items-center rounded-full border px-6 text-sm"
+          >{t['cta.contact']}</a
+        >
+        <a
+          href={config.social.github}
+          target="_blank"
+          rel="noreferrer noopener"
+          class="border-canvas-primary text-fg-inverted inline-flex h-12 cursor-pointer items-center rounded-full border px-6 text-sm"
+        >
+          {t['cta.contribute']}</a
+        >
       </div>
     </Container>
   </div>
