--- a/src/components/BackToTop.astro
+++ b/src/components/BackToTop.astro
@@ -8,7 +8,10 @@ import Icon from './ui/Icon.astro'
   class="bg-canvas pointer-events-none fixed right-6 bottom-6 z-50 rounded-full p-3 opacity-0 shadow-lg transition-all duration-300 ease-in-out outline-none"
   aria-label="Back to Top"
 >
-  <Icon name="chevron-down" class="text-fg-inverted size-4 rotate-180" />
+  <Icon
+    name="chevron-down"
+    class="text-fg-inverted size-4 rotate-180 sm:size-6"
+  />
 </button>
 
 <script>
