--- a/src/sections/ContactSection.astro
+++ b/src/sections/ContactSection.astro
@@ -1,6 +1,5 @@
 ---
 import Container from '~/components/shared/Container.astro'
-import Icon from '~/components/ui/Icon.astro'
 import { getTranslations } from '~/i18n'
 import type { Language } from '~/i18n/types'
 import config from '~/site-config.json'
@@ -15,42 +14,35 @@ const t = getTranslations(lang)
 ---
 
 <section
-  class="animate-fade-up mt-24 opacity-0 sm:mt-32 md:mt-56"
-  id="contact"
+  class="animate-fade-up mx-auto mt-24 max-w-6xl opacity-0 sm:mt-32 sm:px-6 md:mt-56"
   style={{ animationDelay: '0.3s', animationFillMode: 'forwards' }}
 >
-  <Container>
-    <header class="mb-24 flex flex-col gap-4">
-      <h1 class="text-2xl sm:text-4xl">{t['contact.title']}</h1>
-      <p class="text-fg-muted text-xl font-light">
-        {t['contact.subtitle']}
-      </p>
-    </header>
+  <div class="bg-canvas rounded-4xl px-8 py-16 sm:px-16 sm:py-32" id="contact">
+    <Container>
+      <header class="mb-12 flex flex-col gap-4">
+        <h1 class="text-fg-inverted text-2xl font-medium sm:text-4xl">
+          {t['contact.title']}
+        </h1>
+        <p class="text-fg-muted-inverted text-xl leading-6">
+          {t['contact.subtitle']}
+        </p>
+      </header>
 
-    <div class="grid gap-6 md:grid-cols-2">
-      <div class="group hover:bg-fg/10 border-fg/10 border transition-all">
+      <div class="flex items-center gap-4">
         <a
           href={`mailto:${config.social.email}?subject=Consulta%20sobre%20servicios`}
-          class="flex items-center gap-4 px-6 py-8"
+          class="border-canvas bg-canvas-primary text-fg inline-flex h-12 cursor-pointer items-center rounded-full border px-6 text-sm"
+          >{t['cta.contact']}</a
         >
-          <Icon name="envelope-closed" class="text-fg-muted/50 size-5" />
-          <div class="flex-1">
-            <h1>{t['contact.email']}</h1>
-            <p class="text-fg-muted">{config.social.email}</p>
-          </div>
-          <Icon name="external-link" class="text-fg-muted size-4" />
-        </a>
+        <a
+          href={config.social.github}
+          target="_blank"
+          rel="noreferrer noopener"
+          class="border-canvas-primary text-fg-inverted inline-flex h-12 cursor-pointer items-center rounded-full border px-6 text-sm"
+        >
+          {t['cta.contribute']}</a
+        >
       </div>
-      <div class="group hover:bg-fg/10 border-fg/10 border transition-all">
-        <a href={config.social.github} class="flex items-center gap-4 p-6">
-          <Icon name="github-logo" class="text-fg-muted/50 size-5" />
-          <div class="flex-1">
-            <h1>{t['contact.contribute']}</h1>
-            <p class="text-fg-muted">@tinogasta-labs</p>
-          </div>
-          <Icon name="external-link" class="text-fg-muted size-4" />
-        </a>
-      </div>
-    </div>
-  </Container>
+    </Container>
+  </div>
 </section>
