--- a/src/sections/ContactSection.astro
+++ b/src/sections/ContactSection.astro
@@ -31,14 +31,14 @@ const t = getTranslations(lang)
       <div class="flex items-center gap-4">
         <a
           href={`mailto:${config.social.email}?subject=Consulta%20sobre%20servicios`}
-          class="border-canvas bg-canvas-primary text-fg inline-flex h-12 cursor-pointer items-center rounded-full border px-6 text-sm"
+          class="border-canvas bg-canvas-primary dark:bg-fg dark:text-canvas-primary text-fg inline-flex h-12 cursor-pointer items-center rounded-full border px-6 text-sm"
           >{t['cta.contact']}</a
         >
         <a
           href={config.social.github}
           target="_blank"
           rel="noreferrer noopener"
-          class="border-canvas-primary text-fg-inverted inline-flex h-12 cursor-pointer items-center rounded-full border px-6 text-sm"
+          class="border-canvas-primary dark:border-fg text-fg-inverted inline-flex h-12 cursor-pointer items-center rounded-full border px-6 text-sm"
         >
           {t['cta.contribute']}</a
         >
