--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -37,7 +37,7 @@ const social = [
 
       <div class="grid grid-cols-2 gap-8">
         <div>
-          <h2 class="mb-4 text-sm font-medium">{t['footer.links']}</h2>
+          <h2 class="mb-4 font-medium">{t['footer.links']}</h2>
           <ul class="space-y-4">
             {
               links.map(link => (
@@ -52,7 +52,7 @@ const social = [
         </div>
 
         <div>
-          <h2 class="mb-4 text-sm font-medium">{t['footer.connect']}</h2>
+          <h2 class="mb-4 font-medium">{t['footer.connect']}</h2>
           <div class="flex flex-col gap-4">
             {
               social.map(link => (
@@ -70,7 +70,7 @@ const social = [
       class="border-outline text-fg-muted xs:flex-row-reverse flex flex-col items-center justify-between gap-16 border-t pt-8 text-center text-base font-light"
     >
       <LocaleSelect />
-      <span class="text-fg font-medium whitespace-nowrap">
+      <span class="text-fg-muted whitespace-nowrap">
         Tinogasta Labs - {new Date().getFullYear()}
       </span>
     </div>
