prevent initial flash

--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -7,8 +7,8 @@ import Icon from './ui/Icon.astro'
   id="themeToggle"
   aria-label="Theme Toggle"
 >
-  <Icon name="sun" class="size-4" id="sun-icon" />
-  <Icon name="moon" class="size-4" id="moon-icon" />
+  <Icon name="sun" class="hidden size-4" id="sun-icon" />
+  <Icon name="moon" class="hidden size-4" id="moon-icon" />
 </button>
 
 <script is:inline>
