add dark theme (#4)
* add dark theme

* add toggle theme button with user pref support

* prevent initial flash

* add toggle button on desktop

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,6 +12,17 @@
   --outline: #eae7f0;
 }
 
+:root[data-theme='dark'] {
+  --canvas-default: #2d273b;
+  --canvas-primary: #191521;
+  --canvas-muted: #201c28;
+  --fg-default: #f9f6ff;
+  --fg-muted: #b7b5b9;
+  --outline: #24212c;
+}
+
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
+
 @theme {
   --font-sans: 'Mona Sans Variable', ui-sans-serif, system-ui, sans-serif;
   --color-canvas: var(--canvas-default);
