--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,6 +3,7 @@ import LocaleSelect from '~/components/LocaleSelect.astro'
 import { getTranslations } from '~/i18n'
 import type { Language } from '~/i18n/types'
 import config from '~/site-config.json'
+import ThemeToggle from './ThemeToggle.astro'
 import Container from './shared/Container.astro'
 
 export type Props = {
@@ -25,7 +26,7 @@ const social = [
 ]
 ---
 
-<footer class="mt-24 px-6 py-12 sm:mt-32 md:mt-56 md:px-8 lg:px-16">
+<footer class="xs:pb-24 mt-24 px-6 py-12 sm:mt-32 md:mt-56 md:px-8 lg:px-16">
   <Container>
     <div class="mb-12 grid gap-8 md:grid-cols-2">
       <div>
@@ -37,7 +38,7 @@ const social = [
 
       <div class="grid grid-cols-2 gap-8">
         <div>
-          <h2 class="mb-4 text-sm font-medium">{t['footer.links']}</h2>
+          <h2 class="mb-4 font-medium">{t['footer.links']}</h2>
           <ul class="space-y-4">
             {
               links.map(link => (
@@ -52,7 +53,7 @@ const social = [
         </div>
 
         <div>
-          <h2 class="mb-4 text-sm font-medium">{t['footer.connect']}</h2>
+          <h2 class="mb-4 font-medium">{t['footer.connect']}</h2>
           <div class="flex flex-col gap-4">
             {
               social.map(link => (
@@ -69,8 +70,13 @@ const social = [
     <div
       class="border-outline text-fg-muted xs:flex-row-reverse flex flex-col items-center justify-between gap-16 border-t pt-8 text-center text-base font-light"
     >
-      <LocaleSelect />
-      <span class="text-fg font-medium whitespace-nowrap">
+      <div class="xs:w-auto flex items-center gap-4">
+        <LocaleSelect />
+        <div class="hidden sm:inline-block">
+          <ThemeToggle />
+        </div>
+      </div>
+      <span class="text-fg-muted whitespace-nowrap">
         Tinogasta Labs - {new Date().getFullYear()}
       </span>
     </div>
