fix: select width on mobile

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -70,7 +70,7 @@ const social = [
     <div
       class="border-outline text-fg-muted xs:flex-row-reverse flex flex-col items-center justify-between gap-16 border-t pt-8 text-center text-base font-light"
     >
-      <div class="xs:w-auto flex items-center gap-4">
+      <div class="xs:w-auto flex w-full items-center gap-4">
         <LocaleSelect />
         <div class="hidden sm:inline-block">
           <ThemeToggle />
