--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -72,7 +72,7 @@ const social = [
     >
       <div class="xs:w-auto flex w-full items-center gap-4">
         <LocaleSelect />
-        <div class="hidden sm:inline-block">
+        <div class="hidden md:inline-block">
           <ThemeToggle />
         </div>
       </div>
