add contact email

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -62,6 +62,7 @@ const social = [
                 </a>
               ))
             }
+            <span class="text-fg-muted">{config.social.email}</span>
           </div>
         </div>
       </div>
