--- a/src/components/shared/BaseHead.astro
+++ b/src/components/shared/BaseHead.astro
@@ -1,6 +1,7 @@
 ---
 import { ClientRouter } from 'astro:transitions'
 import config from '~/site-config.json'
+import '~/styles/fonts.css'
 
 type Props = {
   title?: string
